- Styling: fixed spacing between panel actions and alerts.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -10952,6 +10952,10 @@ ul.activeusers {
   margin: inherit;
 }
 
+.panel .panel-body .actions + .alert {
+  margin-top: var(--spacing-small);
+}
+
 .panel-block {
   position: relative;
   display: -ms-flexbox;
